Задание 5 редактирование ксс
index.html:
1. состояние кнопок
2. состояние полей форм
3. уточнена сетка, кроме футера
4.  ...

monopods-for-selfi.html:
1. фильтр fieldset

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
               </ul>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#services-section">Доставка</a>
+              <a class="link" href="index.html#services-section">Доставка</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#services-section">Гарантия</a>
+              <a class="link" href="index.html#services-section">Гарантия</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#contacts-section">Контакты</a>
+              <a class="link" href="index.html#contacts-section">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -204,39 +204,33 @@
         <h2 class="visually-hidden">Популярные продукты</h2>
         <ul class="popular-product-list">
           <li class="popular-product-item">
-            <a class="link-user-menu" href="#">
+            <a class="link" href="#">
               <h3 class="popular-product-title">Виртуальная реальность</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
           <li class="popular-product-item">
-            <a class="link-user-menu" href="monopods-for-selfi.html">
+            <a class="link" href="monopods-for-selfi.html">
               <h3 class="popular-product-title">Моноподы <br>для селфи</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
           <li class="popular-product-item">
-            <a class="link-user-menu" href="#">
+            <a class="link" href="#">
               <h3 class="popular-product-title">Экшн-камеры</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
           <li class="popular-product-item">
-            <a class="link-user-menu" href="#">
+            <a class="link" href="#">
               <h3 class="popular-product-title">Фитнес-браслеты</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
           <li class="popular-product-item">
-            <a class="link-user-menu" href="#">
+            <a class="link" href="#">
               <h3 class="popular-product-title">Умные часы</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
           <li class="popular-product-item">
-            <a class="link-user-menu" href="#">
+            <a class="link" href="#">
               <h3 class="popular-product-title">Квадракоптеры</h3>
-              <div class="popular-product-image"></div>
             </a>
           </li>
         </ul>
@@ -255,9 +249,15 @@
           <input class="visually-hidden" id="services-slide2" name="services-slides" type="radio">
           <input class="visually-hidden" id="services-slide3" name="services-slides" type="radio">
           <div class="services-active">
-            <p class="content"><label for="services-slide1" tabindex="0">Доставка</label></p>
-            <p class="content"><label for="services-slide2" tabindex="0">Гарантия</label></p>
-            <p class="content"><label for="services-slide3" tabindex="0">Кредит</label></p>
+            <p>
+              <label class="link btn" for="services-slide1" tabindex="0">Доставка</label>
+            </p>
+            <p>
+              <label class="link btn" for="services-slide2" tabindex="0">Гарантия</label>
+            </p>
+            <p>
+              <label class="link btn" for="services-slide3" tabindex="0">Кредит</label>
+            </p>
           </div>
           <ul class="services-list">
             <li class="services-item">
@@ -310,7 +310,7 @@
       </div>
     </section>
 
-    <div class="container2">
+    <div class="container">
 
       <section class="about-us">
         <h2 class="section-title">О нас</h2>
@@ -404,13 +404,13 @@
         <div class="main-menu">
           <ul class="main-menu-list" aria-label="Главное меню в футере">
             <li class="main-menu-item">
-              <a class="link" href="#services-section">Доставка</a>
+              <a class="link" href="index.html#services-section">Доставка</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#services-section">Гарантия</a>
+              <a class="link" href="index.html#services-section">Гарантия</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#contacts-section">Контакты</a>
+              <a class="link" href="index.html#contacts-section">Контакты</a>
             </li>
           </ul>
         </div>
