--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -83,13 +83,13 @@
               </ul>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#">Доставка</a>
+              <a class="link" href="index.html#services-section">Доставка</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#">Гарантия</a>
+              <a class="link" href="index.html#services-section">Гарантия</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#">Контакты</a>
+              <a class="link" href="index.html#contacts-section">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -320,13 +320,13 @@
         <div class="main-menu">
           <ul class="main-menu-list" aria-label="Главное меню в футере">
             <li class="main-menu-item">
-              <a class="link" href="#">Доставка</a>
+              <a class="link" href="index.html#services-section">Доставка</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#">Гарантия</a>
+              <a class="link" href="index.html#services-section">Гарантия</a>
             </li>
             <li class="main-menu-item">
-              <a class="link" href="#">Контакты</a>
+              <a class="link" href="index.html#contacts-section">Контакты</a>
             </li>
           </ul>
         </div>
