--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 
     <div class="container">
       <div class="header-container">
-
-        <p class="logo-container">
-          <a class="logo">Device</a>
-        </p>
+        
+          <a class="logo">Device</a>       
 
         <div class="header-wrapper">
 
@@ -318,13 +316,13 @@
         <p class="content">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями: </p>
         <ul class="companies-list">
           <li class="companies-item">
-            <b>Деловые линии</b>
+            Деловые линии
           </li>
           <li class="companies-item">
-            <b>Автотрейдинг</b>
+            Автотрейдинг
           </li>
           <li class="companies-item">
-            <b>ЖелДорЭкспидиция</b>
+            ЖелДорЭкспидиция
           </li>
         </ul>
         <a href="#" class="link btn">Подробнее о нас</a>
@@ -378,10 +376,8 @@
 
     <div class="container">
 
-      <div class="footer-top">
-        <p class="logo-container">
-          <a class="logo">Device</a>
-        </p>
+      <div class="footer-top">        
+          <a class="logo">Device</a>        
         <div class="user-menu">
           <ul class="user-menu-list" aria-label="Меню пользователя в футере">
             <li class="user-enter user-menu-item">
